Done with the Adobo Fried Rice Recipe page.
I will finish immediately for the last page of odin recipes which is Dinuguan page

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h1> <center>  Odin Recipes </center> </h1>
         <!-- Button Dishes -->
         <a href=" ./recipes/pork-menudo.html"> Pork Menudo </a> <br>
-        <a href=" ./recipes/pork-menudo.html"> Adobo Fried Rice </a> <br> 
-        <a href=" ./recipes/pork-menudo.html"> Dinuguan </a>  
+        <a href=" ./recipes/adobo-fried-rice.html"> Adobo Fried Rice </a> <br> 
+        <a href=" ./recipes/dinuguan.html"> Dinuguan </a>  
     </div>
     
 </body>
