--- a/recipes/pork-menudo.html
+++ b/recipes/pork-menudo.html
@@ -122,7 +122,7 @@
                     </ul>
                 </td>
                 <td>
-                    <p> MAGGI® Magic Sarap® 8g </p>
+                    <p> <a href="https://www.maggi.ph/product/8g-maggir-magic-sarapr/" target="_blank" rel="noopener noreferrer"> MAGGI® Magic Sarap® 8g</a> </p>
                 </td>
             </tr>
             <tr>
