Finally done with all of pages remaining such as recipe
I add an image of Odin gif at index page to try the the gif function

This was made purely in HTML, and slightly css using style in HTML file

Will continue the work and upgrade the functionality of project

--- a/recipes/pork-menudo.html
+++ b/recipes/pork-menudo.html
@@ -30,6 +30,10 @@
         h1, h4 {
             text-align: center;
         }
+
+        p, li, a {
+            color: gray;
+        }
         /* Style Table  */
         table {
             font-family: Arial, Helvetica, sans-serif;
@@ -66,7 +70,7 @@
             liver in tomato sauce with carrots and potatoes</p>
         </h2>
         <h3> Ingredients </h3>
-        <p> This dish has been optimized for 6 servings. Quantity and times may need to be varied. </p>
+        <p> This dish has been optimized for 3 servings. Quantity and times may need to be varied. </p>
         <p> <strong> Our best tips & tricks for customized portion size </strong> 
             If the quantities are increased, the cooking time may be extended, so look again. Use water & spices sparingly at first and add more later if needed. </p>
         
@@ -221,12 +225,13 @@
         <h3> Recipe Instruction </h3>
 
         <ol>
+            <h3> Step 1</h3>
             <p> <li> Sauté potato and carrot in 1 tbsp oil until golden brown. Remove and set aside for 10 minutes. </li></p> 
-
+            <h3> Step 2</h3>
             <p> <li> Season pork shoulder with 1 sachet of MAGGI® Magic Sarap®. Sauté pork in the same pan. Remove and set aside for 5 minutes.  </li> </p>
-
+            <h3> Step 3</h3>   
             <p> <li> Sauté garlic, onion and bell peppers. Pour tomato sauce and water. Add pork, bay leaf, pepper and sugar. Simmer for 45 minutes. </li> </p>
-
+            <h3> Step 4</h3>
             <p> <li> Add potato and carrot. Season with remaining sachet of MAGGI® Magic Sarap® and simmer for another 10 minutes. Transfer into a serving plate and serve.  </li> </p>
 
         </ol>
