--- a/index.html
+++ b/index.html
@@ -3,19 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
-<style>
-    
-</style>
+    <title>Odin Dishes Recipes</title>
+
+    <style>
+        body{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+        }
+
+        /* Parent div  */
+        .centered-div {
+            width: 100vh;
+            align-items: center;
+            background-color: white;
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+
+        .centered-div img {
+            max-width:100%;
+            padding-left: 5px;
+        }
+
+        h1, h4 {
+            text-align: center;
+        }
+
+        img {
+            width: 1000px;
+            height: 750px;
+        }
+
+    </style>
 </head>
 <body>
-    <div>
-        <h1> <center>  Odin Recipes </center> </h1>
-        <!-- Button Dishes -->
-        <a href=" ./recipes/pork-menudo.html"> Pork Menudo </a> <br>
-        <a href=" ./recipes/adobo-fried-rice.html"> Adobo Fried Rice </a> <br> 
-        <a href=" ./recipes/dinuguan.html"> Dinuguan </a>  
+
+    <div class="centered-div">
+        <h1> Odin Filipino Recipe </h1>
+        <img src="./images/odin-hilarious.gif" alt="odin laugh">
+        <!-- Dishes button section -->
+        <div>
+            <ul>
+                <li> <a href=" ./recipes/pork-menudo.html"> Pork Menudo </a> <br> </li>
+                <li> <a href=" ./recipes/adobo-fried-rice.html"> Adobo Fried Rice </a> <br>  </li>
+                <li> <a href=" ./recipes/dinuguan.html"> Dinuguan </a></li>
+            </ul>
+        </div>  
     </div>
-    
+
+
 </body>
 </html>
